# counter

./: .gitignore  README.md  basic_handlers.py  basic_handlers_test.py  ideas.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  main.py
src/handlers/: basic.py
src/tests/handlers/: basic_test.py
static/: base.js  index.html
