[tool.poetry]
name = "clicker"
version = "0.1.0"
description = "Just clicker with async technology on backend side"
authors = ["k1-k0 <kmssrvk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
cchardet = "^2.1.7"
aiodns = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
